# final-projects

./: .gitattributes  README.md
1_WS2021/: rombergs_method_and_interpolation.py
1_WS2021/Mechanic-CAD/: Abschlussprojekt - Baugruppe - Kurbeltrieb.SLDASM  Antriebswelle.SLDPRT  Blechwinkel.SLDPRT  Kolben.SLDPRT  Kurbelscheibe.SLDPRT  Lagergehaeuse.SLDPRT  Pleuelstange.SLDPRT  Zylinder.SLDPRT
1_WS2021/numerical recipies/: 2d_quantum_harmonic_oscillator.c  meson.build
2_SS21/: kmeans_clustering.py
2_SS21/algorithm and data structures/: knuth_plass_line_breaking_dynamic_programming.py
2_SS21/dynamic websites with php and mariaDB/: Registrierung.php  readme.txt
3_WS2122/genomics and bioinformatics II/: blatt1.Rmd  blatt1.html  blatt2.html  blatt2.rmd  (+12 more)
Genomics and Bioinformatics II/: blatt1.Rmd  blatt1.html  blatt2.html  blatt2.rmd  blatt3.html  blatt3.rmd  blatt4.html  blatt4.rmd  blatt5.Rmd  blatt5.html  blatt6.html  blatt6.rmd  blatt7.html  blatt7.rmd  blatt8.html  blatt8.rmd
algorithm and data structures/: gg7.txt  gg7_good.txt  gg7_naive.txt
dynamic websites with php and mariaDB/: Admin.php  Bestaetigung.php  Details.php  Login.php  Onlineshop.php
genomics and bioinformatics I/: blatt1.py  blatt10_C.py  blatt10_D.py  blatt3_B.py  blatt3_C.py  blatt4_D.py  blatt5_B.py  blatt5_D.py  blatt8_D.py
microcontroller/: extra_distance_hcsr04.c  main_robot_car_gloetzl.c
online book store/: Admin.php  Bestaetigung.php  Details.php  Login.php  Onlineshop.php  Registrierung.php  readme.txt
parallel programming in fortran/: plotting.py  project.f90  read_me.txt
(+63 files in other folders)
